--- a/app/src/main/res/layout/activity_pop_up_add_user.xml
+++ b/app/src/main/res/layout/activity_pop_up_add_user.xml
@@ -12,7 +12,8 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/Relative">
+    android:id="@+id/Relative"
+    style="@style/backgroundcolor">
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
