--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -57,9 +57,21 @@
         android:textSize="20sp"
         android:layout_below="@+id/valtas"
         android:id="@+id/cim2"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="20dp"
         style="@style/edittext"
         />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Felvétel"
+        style="@style/button"
+        android:layout_marginTop="10dp"
+        android:textSize="15dp"
+        android:id="@+id/felvetel"
+        android:layout_marginRight="10dp"
+        android:layout_below="@+id/valtas"
+        android:layout_alignParentEnd="true"/>
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
