--- a/app/src/main/res/layout/activity_transaction.xml
+++ b/app/src/main/res/layout/activity_transaction.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     style="@style/backgroundcolor"
     android:layout_width="match_parent"
@@ -40,30 +41,36 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/gomb"
-        android:orientation="horizontal"
-        >
-        <RadioButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Kiadás"
-            android:id="@+id/expense"
-            />
+        android:orientation="horizontal">
 
         <RadioButton
+            android:id="@+id/expense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Bevétel"
-            android:id="@+id/income"/>
+            android:text="Kiadás" />
+
+        <RadioButton
+            android:id="@+id/income"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Bevétel" />
+
+        <RadioButton
+            android:id="@+id/transfer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Utalás" />
     </RadioGroup>
 
     <LinearLayout
+        android:id="@+id/transaction"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/radioGroup"
         android:orientation="vertical"
-        android:id="@+id/transaction"
         android:padding="10dp">
 
         <EditText
@@ -75,77 +82,204 @@
             android:textSize="20sp" />
 
         <LinearLayout
+            android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="10dp">
+            android:orientation="vertical">
+            
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp">
+
+                <TextView
+                    style="@style/edittext"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="Kategória:"
+                    android:textSize="20sp" />
+
+                <Spinner
+                    android:id="@+id/category"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:spinnerMode="dropdown" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/repeatlayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    style="@style/edittext"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Ismétlődő kifizetés: "
+                    android:textSize="20sp" />
+
+                <CheckBox
+                    android:id="@+id/repeat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/repeatexpense"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        style="@style/edittext"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Kezdő dátum:"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/datestart"
+                        style="@style/edittext"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:hint="2025-02-23"
+                        android:textAlignment="center"
+                        android:textSize="18sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        style="@style/edittext"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Lejárati dátum:"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/datened"
+                        style="@style/edittext"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:hint="2025-02-24"
+                        android:textAlignment="center"
+                        android:textSize="18sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="15dp">
+
+                    <TextView
+                        style="@style/edittext"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:text="Ismétlődés:"
+                        android:textSize="20sp" />
+
+                    <EditText
+                        android:id="@+id/ammount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="2dp"
+                        android:layout_weight="1"
+                        android:inputType="number"
+                        android:textAlignment="center"
+                        android:textSize="20sp" />
+
+                    <Spinner
+                        android:id="@+id/metrik"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:spinnerMode="dropdown" />
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/description"
+                style="@style/edittext"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:gravity="top"
+                android:hint="Megjegyzés:"
+                android:inputType="text|textMultiLine" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:orientation="horizontal"
+            android:id="@+id/transferLayout"
+            android:visibility="gone">
 
             <TextView
                 style="@style/edittext"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:textSize="20sp"
-                android:text="Kategória:" />
+                android:layout_weight="1"
+                android:text="Számlaszám:"
+                android:textSize="20sp" />
 
-            <Spinner
-                android:id="@+id/category"
+            <EditText
+                android:id="@+id/szamlaszam"
+                style="@style/edittext"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:spinnerMode="dropdown"
-                android:gravity="center"
-                />
+                android:layout_height="wrap_content"
+                android:layout_weight="44"
+                android:textAlignment="center"
+                android:textSize="18sp" />
         </LinearLayout>
 
-        <EditText
-            android:id="@+id/vendor"
-            style="@style/edittext"
+
+
+        <TextView
+            android:id="@+id/error"
+            style="@style/errormessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Cég:"
-            android:textSize="20sp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/date"
-                style="@style/edittext"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:hint="date:"
-                android:textSize="20sp" />
-
-            <EditText
-                android:id="@+id/datened"
-                style="@style/edittext"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:hint="datened:"
-                android:textSize="20sp" />
-
-        </LinearLayout>
-
-        <EditText
-            android:id="@+id/description"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:inputType="text|textMultiLine"
-            android:gravity="top"
-            android:hint="Megjegyzés:"
-            style="@style/edittext"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        style="@style/errormessage"
-        android:id="@+id/error"/>
+            android:textAlignment="center" />
 
     </LinearLayout>
+    <ProgressBar
+        android:id="@+id/loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="100dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="100dp"
+        android:visibility="gone"
+        android:layout_alignParentBottom="true"
+        android:layout_alignEnd="@+id/transaction"
+        android:layout_alignStart="@+id/transaction"
+        android:layout_alignParentTop="true"
+        app:layout_constraintVertical_bias="0.3" />
+
 
 </RelativeLayout>
