--- a/app/src/main/res/layout/cardlayout.xml
+++ b/app/src/main/res/layout/cardlayout.xml
@@ -24,6 +24,16 @@
             android:textColor="@color/white"
             android:id="@+id/balance"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        style="@style/edittext"
+        android:textSize="25sp"
+        android:textAlignment="center"
+        android:id="@+id/id"/>
+
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
