--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,7 +25,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Pénznem Váltás:"
+            android:text="Árfolyam:"
             android:textSize="20sp"
             android:id="@+id/cim"
             android:layout_marginBottom="15dp"
