--- a/app/src/main/res/layout/activity_arfolyam.xml
+++ b/app/src/main/res/layout/activity_arfolyam.xml
@@ -1,34 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".arfolyam"
+    tools:context=".ui.arfolyam.arfolyam"
     style="@style/backgroundcolor"
+    android:orientation="horizontal"
     >
+   <RelativeLayout
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:id="@+id/oszlop1"
+       android:layout_weight="1"
+       android:gravity="center">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="66dp"
-        android:id="@+id/back"
+        android:id="@+id/oszlop1back"
         android:src="@drawable/arfolyambackground"/>
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="61dp"
         android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/back"
-        android:id="@+id/iconbal"
+        android:layout_alignLeft="@+id/oszlop1back"
+        android:id="@+id/oszlop1iconbal"
         android:src="@drawable/up"
         style="@style/backgroundcolor"/>
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/iconbal"
-        android:id="@+id/datalayout"
+        android:layout_toRightOf="@+id/oszlop1iconbal"
+        android:id="@+id/oszlop1datalayout"
         >
 
         <TextView
@@ -37,24 +44,81 @@
             android:textStyle="bold"
            android:layout_marginTop="10dp"
             android:layout_marginLeft="20dp"
-            android:id="@+id/currency"
+            android:id="@+id/oszlop1currency"
             style="@style/edittext"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/currency"
+            android:layout_toRightOf="@+id/oszlop1currency"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="20dp"
-            android:id="@+id/currentrate"
+            android:id="@+id/oszlop1currentrate"
             style="@style/edittext"/>
 
     </RelativeLayout>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/datalayout"
+        android:layout_below="@+id/oszlop1datalayout"
         android:textSize="12sp"
         android:layout_marginTop="7dp"
         android:layout_centerHorizontal="true"
-        android:id="@+id/change"/>
-</RelativeLayout>
+        android:id="@+id/oszlop1change"/>
+   </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/oszlop2"
+        android:layout_weight="1"
+        android:gravity="center">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="66dp"
+            android:id="@+id/oszlop2back"
+            android:src="@drawable/arfolyambackground"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="61dp"
+            android:layout_centerVertical="true"
+            android:layout_alignLeft="@+id/oszlop2back"
+            android:id="@+id/oszlop2iconbal"
+            android:src="@drawable/up"
+            style="@style/backgroundcolor"/>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/oszlop2iconbal"
+            android:id="@+id/oszlop2datalayout"
+            >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                android:id="@+id/oszlop2currency"
+                style="@style/edittext"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/oszlop2currency"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                android:id="@+id/oszlop2currentrate"
+                style="@style/edittext"/>
+
+        </RelativeLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/oszlop2datalayout"
+            android:textSize="12sp"
+            android:layout_marginTop="7dp"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/oszlop2change"/>
+    </RelativeLayout>
+</LinearLayout>
