--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,77 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/backgroundcolor"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomeFragment"
-    style="@style/backgroundcolor"
     android:padding="15dp"
-    >
-    <include layout="@layout/cardlayout"
+    tools:context=".ui.home.HomeFragment">
+
+    <include
         android:id="@+id/cardlayout"
+        layout="@layout/cardlayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp" />
 
-    <RelativeLayout
+
+    <LinearLayout
+        android:id="@+id/buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/cardlayout"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:id="@+id/valtas"
         >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Árfolyam:"
-            android:textSize="20sp"
-            android:id="@+id/cim"
-            android:layout_marginBottom="15dp"
-            style="@style/edittext"/>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/cim">
-    <include layout="@layout/activity_arfolyam"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/arfolyam1"
-        android:layout_weight="1"
-        android:layout_marginHorizontal="10dp"/>
 
-        <include layout="@layout/activity_arfolyam"
-            android:layout_width="0dp"
-            android:id="@+id/arfolyam2"
+        <Button
+            android:layout_width="125dp"
+            android:layout_height="60dp"
+            android:layout_marginHorizontal="5dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
-            />
+            android:id="@+id/statistic"
+            android:layout_gravity="center"
+            android:textSize="11dp"
+            android:text="Statisztika" />
+
+        <Button
+            android:layout_width="125dp"
+            android:layout_height="60dp"
+            android:layout_marginHorizontal="5dp"
+            android:layout_weight="1"
+            android:id="@+id/arfolyam"
+            android:layout_gravity="center"
+            android:textSize="12sp"
+            android:text="Árfolyam" />
+
+        <Button
+            android:layout_width="125dp"
+            android:layout_height="60dp"
+            android:layout_marginHorizontal="5dp"
+            android:layout_weight="1"
+            android:textSize="12sp"
+            android:layout_gravity="center"
+            android:id="@+id/repetableinfo"
+            android:text="ismétlődő kifizetések" />
+
+
     </LinearLayout>
-    </RelativeLayout>
+
     <TextView
+        android:id="@+id/cim2"
+        style="@style/edittext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tranzakciók:"
-        android:textSize="20sp"
-        android:layout_below="@+id/valtas"
-        android:id="@+id/cim2"
+        android:layout_below="@+id/buttons"
         android:layout_marginTop="20dp"
-        style="@style/edittext"
-        />
+        android:text="Tranzakciók:"
+        android:textSize="20sp" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Felvétel"
-        style="@style/button"
-        android:layout_marginTop="10dp"
-        android:textSize="15dp"
         android:id="@+id/felvetel"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_below="@+id/buttons"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
-        android:layout_below="@+id/valtas"
-        android:layout_alignParentEnd="true"/>
+        android:text="Felvétel"
+        android:textSize="15sp" />
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -79,10 +84,9 @@
         android:layout_marginTop="15dp">
 
         <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/transactionsListView"
-            />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
     </RelativeLayout>
 
