--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     tools:context=".regist"
     android:gravity="center"
-
+    style="@style/backgroundcolor"
+    android:padding="15dp"
     >
 
     <EditText
