--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -72,4 +72,9 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="divider">
+        <item name="android:divider">@color/darkblue</item>
+        <item name="android:dividerHeight">8dp</item>
+    </style>
+
 </resources>
