--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -39,7 +39,7 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textColorHint">@color/darkgray</item>
     </style>
-    <style name="button">s
+    <style name="button">
         <item name="android:textColor">@color/white</item>
         <item name="android:background">@color/orange_700</item>
     </style>
@@ -57,6 +57,11 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:backgroundTint">@color/red</item>
         <item name="android:textSize">15dp</item>
+    </style>
+
+    <style name="divider">
+        <item name="android:divider">@color/gray</item>
+        <item name="android:dividerHeight">10dp</item>
     </style>
 
     <style name="Theme.Navigateside.costume">
